--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,37 @@ jobs:
         run: |
           find scripts -name "*.sh" -exec shellcheck {} \;
 
+  powershell-syntax:
+    runs-on: windows-latest
+    name: PowerShell Script Syntax
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Parse PowerShell scripts
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          $hasErrors = $false
+          $scripts = Get-ChildItem -Path scripts -Filter "*.ps1" -Recurse
+
+          foreach ($script in $scripts) {
+            $tokens = $null
+            $errors = $null
+            [System.Management.Automation.Language.Parser]::ParseFile($script.FullName, [ref]$tokens, [ref]$errors) | Out-Null
+
+            if ($errors.Count -gt 0) {
+              $hasErrors = $true
+              foreach ($errorRecord in $errors) {
+                Write-Host "::error file=$($script.FullName)::$($errorRecord.Message)"
+              }
+            }
+          }
+
+          if ($hasErrors) {
+            throw "PowerShell parsing failed for one or more scripts."
+          }
+
   markdown-lint:
     runs-on: ubuntu-latest
     name: Markdown Linting
