--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
 
@@ -13,9 +17,10 @@ jobs:
   shellcheck:
     runs-on: ubuntu-latest
     name: Shell Script Linting
+    timeout-minutes: 10
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Install ShellCheck
         run: |
@@ -29,9 +34,10 @@ jobs:
   powershell-syntax:
     runs-on: windows-latest
     name: PowerShell Script Syntax
+    timeout-minutes: 10
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Parse PowerShell scripts
         shell: pwsh
@@ -60,9 +66,10 @@ jobs:
   macos-flow-smoke:
     runs-on: macos-latest
     name: macOS Flow Smoke
+    timeout-minutes: 15
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Validate macOS installer flow (dry-run)
         run: |
@@ -71,9 +78,10 @@ jobs:
   linux-flow-smoke:
     runs-on: ubuntu-latest
     name: Linux Flow Smoke
+    timeout-minutes: 15
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Validate Linux installer flow (dry-run)
         run: |
@@ -82,9 +90,10 @@ jobs:
   windows-flow-smoke:
     runs-on: windows-latest
     name: Windows Flow Smoke
+    timeout-minutes: 15
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Validate Windows installer flow (dry-run)
         shell: pwsh
@@ -94,12 +103,13 @@ jobs:
   markdown-lint:
     runs-on: ubuntu-latest
     name: Markdown Linting
+    timeout-minutes: 10
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Lint Markdown Files
-        uses: DavidAnson/markdownlint-cli2-action@v15
+        uses: DavidAnson/markdownlint-cli2-action@510b996878fc0d1a46c8a04ec86b06dbfba09de7 # v15
         with:
           globs: |
             **/*.md
@@ -109,11 +119,12 @@ jobs:
   link-check:
     runs-on: ubuntu-latest
     name: Link Checking
+    timeout-minutes: 10
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
       - name: Check Links
-        uses: lycheeverse/lychee-action@v1
+        uses: lycheeverse/lychee-action@2b973e86fc7b1f6b36a93795fe2c9c6ae1118621 # v1
         with:
-          args: --no-progress README.md
+          args: --no-progress README.md CONTRIBUTING.md SECURITY.md CHANGELOG.md ".github/**/*.md" "docs/**/*.md" "wiki/**/*.md"
